# karma-core

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  genesis.json
docker/: bitsharesentry.sh  default_config.ini  default_config_local_0.ini
libraries/app/: application.cpp  database_api.cpp  impacted.cpp
libraries/app/include/graphene/app/: database_api.hpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  asset_object.cpp  committee_member_evaluator.cpp  credit_evaluator.cpp  credit_object.cpp  db_block.cpp  db_init.cpp  db_maint.cpp  db_notify.cpp  db_update.cpp  exchange_rate_evaluator.cpp  exchange_rate_object.cpp  git_revision.cpp.in
libraries/chain/hardfork.d/: CORE_KARMA_2.hf
libraries/chain/include/graphene/chain/: account_object.hpp  asset_object.hpp  config.hpp  credit_evaluator.hpp  credit_object.hpp  database.hpp  exchange_rate_evaluator.hpp  (+3 more)
libraries/chain/protocol/: credit.cpp  exchange_rate.cpp  fee_schedule.cpp
libraries/plugins/debug_witness/: debug_witness.cpp
libraries/plugins/witness/: witness.cpp
libraries/wallet/: wallet.cpp
programs/: CMakeLists.txt
programs/cli_wallet/: main.cpp
programs/karma/: CMakeLists.txt  main.cpp
programs/scripts/: clear_dir.sh  cli_new_commands.txt  new_start_node.sh  start_node.sh
tests/app/: main.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/generate_empty_blocks/: main.cpp
tests/tests/: authority_tests.cpp  block_tests.cpp  database_api_tests.cpp  operation_tests.cpp  operation_tests2.cpp  uia_tests.cpp
(+8 files in other folders)
